[package]
name = "rsnow"
version = "0.1.0"
edition = "2021"
description = "A simple snowfall animation in Rust"
authors = ["Wenjie Wei <wjwei9908@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
crossterm = "0.27.0"
rand = "0.8.5"
